--- a/rutas/package.json
+++ b/rutas/package.json
@@ -14,8 +14,11 @@
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
-    "react-router": "^7.8.0"
+    "react-router": "^7.8.0",
+    "react-router-dom": "^7.8.0",
+    "sweetalert2": "^11.22.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
